--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-AWS_ACCESS_KEY_ID=your_access_key_id
-AWS_SECRET_ACCESS_KEY=your_secret_access_key
-AWS_REGION=your_region
-S3_BUCKET_NAME=your_bucket_name
+ENABLE_LOGGING = True
+FILE_PATH = C:\Users\bornd\PycharmProjects\Aggregator\sample.csv
+SAVE_REPORT_LOCALLY = True
+SAVE_TO_S3 = True
+OUTPUT_FILE_NAME = Aggregated_report.csv
+AWS_ACCESS_KEY_ID = your_access_key_id
+AWS_SECRET_ACCESS_KEY = your_secret_access_key
+AWS_REGION = your_region
+S3_BUCKET_NAME = your_bucket_name
